--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Toko Triarga</title>
+    <script>
+      function updateNilai(nilai) {
+          document.getElementById('nilai_terpilih').innerHTML = nilai;
+      }
+    </script>
 </head>
 
 <body>
@@ -35,9 +40,9 @@
                     <div class="card mx-auto" style="width: 80%;">
                         <img class="w-100" src="https://lh4.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
-                          <h5 class="card-title">Sevenkey Hitam Corak (XL)</h5>
-                          <p class="card-text">Rp.95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#keranjang">+ Keranjang</button>
+                          <h5 class="card-title">Sevenkey Hitam Corak</h5>
+                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
                         </div>
                     </div>
                 </div>
@@ -46,9 +51,9 @@
                     <div class="card mx-auto" style="width: 80%;">
                         <img class="w-100" src="https://lh4.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
-                          <h5 class="card-title">Sevenkey Hitam Corak (XL)</h5>
-                          <p class="card-text">Rp.95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#keranjang">+ Keranjang</button>
+                          <h5 class="card-title">Sevenkey Hitam Corak</h5>
+                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
                         </div>
                     </div>
                 </div>
@@ -57,9 +62,9 @@
                     <div class="card mx-auto" style="width: 80%;">
                         <img class="w-100" src="https://lh3.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
-                          <h5 class="card-title">Sevenkey Hitam Corak (XL)</h5>
-                          <p class="card-text">Rp.95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#keranjang">+ Keranjang</button>
+                          <h5 class="card-title">Sevenkey Hitam Corak</h5>
+                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
                         </div>
                     </div>
                 </div>
@@ -68,9 +73,9 @@
                     <div class="card mx-auto" style="width: 80%;">
                         <img class="w-100" src="https://lh3.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
-                          <h5 class="card-title">Sevenkey Hitam Corak (XL)</h5>
-                          <p class="card-text">Rp.95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#keranjang">+ Keranjang</button>
+                          <h5 class="card-title">Sevenkey Hitam Corak</h5>
+                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
                         </div>
                     </div>
                 </div>
@@ -79,9 +84,9 @@
                     <div class="card mx-auto" style="width: 80%;">
                         <img class="w-100" src="https://lh3.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
-                          <h5 class="card-title">Sevenkey Hitam Corak (XL)</h5>
-                          <p class="card-text">Rp.95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#keranjang">+ Keranjang</button>
+                          <h5 class="card-title">Sevenkey Hitam Corak</h5>
+                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
                         </div>
                     </div>
                 </div>
@@ -89,7 +94,7 @@
             </div>
         </div>
 
-  <!-- Modal -->
+  <!-- Modal keranjang -->
   <div class="modal fade" id="keranjang" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -128,11 +133,75 @@
         </div>
         <div style="justify-content: space-between;" class="modal-footer float-none">
             <h5>Total : Rp.165.000,00</h5>
-            <button type="button" class="btn btn-primary float-end">Checkout</button>
+            
+            <button type="button" class="btn btn-primary">Checkout</button>
         </div>
       </div>
     </div>
   </div>
+<!--modal detail barang-->
+  <div class="modal fade" id="detailBarang" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Detail Barang</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!--carousel barang-->
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="https://lh4.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://lh3.googleusercontent.com/u/0/drive-viewer/AKGpihZpLpN0CYrJPszxLOrjWd2Zm27mYp11wS90fNqKagR4R3JeGrAK640MvKX-8K4uZ6vGtXaZoEIhb9aDgx6IrXwypKsxKkWWrxo=w1908-h897-rw-v1" class="d-block w-100" alt="...">
+              </div>
+              
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <!--deskripsi-->
+        <h5 class="text-center">Sevenkey Hitam Corak</h5>
+        <!--radio button ukuran-->
+        <div class="container" style="width:fit-content;">
+          <div class="row">
+            <div class="col">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="80.000,00" onclick="updateNilai(this.value)">
+                <label class="form-check-label" for="flexRadioDefault1">
+                  L
+                </label>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="95.000,00" onclick="updateNilai(this.value)">
+                <label class="form-check-label" for="flexRadioDefault2">
+                  XL
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div style="justify-content: space-between;" class="modal-footer float-none">
+          <h5>Harga : Rp.  <span id="nilai_terpilih">Pilih Ukuran</span></h5>
+          <button type="button" class="btn btn-primary">Beli Langsung</button>
+          <button type="button" class="btn btn-primary">+ Keranjang</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
