--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
                           <p class="card-text">Rp.80.000,00 - 95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
+                          <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
                           <p class="card-text">Rp.80.000,00 - 95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
+                          <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
                           <p class="card-text">Rp.80.000,00 - 95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
+                          <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
                           <p class="card-text">Rp.80.000,00 - 95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
+                          <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
                           <p class="card-text">Rp.80.000,00 - 95.000,00</p>
-                          <button class="btn btn-warning w-100" data-bs-toggle="modal" data-bs-target="#detailBarang">Beli</button>
+                          <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
                 </div>
