--- a/alamat.html
+++ b/alamat.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="fixed-top container-fluid bg-success">
+        <div class="fixed-top container-fluid bg-danger">
             <a class="navbar-brand text-white" href="index.html" style="font-size: 40px;">TRIARGA</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
