--- a/detail_barang.html
+++ b/detail_barang.html
@@ -24,7 +24,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="fixed-top container-fluid bg-success">
+        <div class="fixed-top container-fluid bg-danger">
             <a class="navbar-brand text-white" href="index.html" style="font-size: 40px;">TRIARGA</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -65,14 +65,14 @@
                 <h3>Sevenkey Hitam Corak</h3>
                 <p>Terjual 100+ | <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 32 32"><path fill="#fcd53f" d="m18.7 4.627l2.247 4.31a2.27 2.27 0 0 0 1.686 1.189l4.746.65c2.538.35 3.522 3.479 1.645 5.219l-3.25 2.999a2.225 2.225 0 0 0-.683 2.04l.793 4.398c.441 2.45-2.108 4.36-4.345 3.24l-4.536-2.25a2.282 2.282 0 0 0-2.006 0l-4.536 2.25c-2.238 1.11-4.786-.79-4.345-3.24l.793-4.399c.14-.75-.12-1.52-.682-2.04l-3.251-2.998c-1.877-1.73-.893-4.87 1.645-5.22l4.746-.65a2.23 2.23 0 0 0 1.686-1.189l2.248-4.309c1.144-2.17 4.264-2.17 5.398 0"/></svg>
                 4.9 (100 rating) | Komentar (2)</p>
-                <h1>Rp. <span id="nilai_terpilih">80.000,00</span></h1>
+                <h1>Rp<span id="nilai_terpilih">80.000</span></h1>
                 <hr>
                 <h4>Pilih Ukuran</h4>
                 <div class="container float-start" style="width:fit-content;">
                     <div class="row">
                       <div class="col">
                         <div class="form-check">
-                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="80.000,00" data-info="L" onclick="updateNilai(this)">
+                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" value="80.000" data-info="L" onclick="updateNilai(this)">
                           <label class="form-check-label" for="flexRadioDefault1">
                             L
                           </label>
@@ -80,7 +80,7 @@
                       </div>
                       <div class="col">
                         <div class="form-check">
-                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="95.000,00" data-info="XL" onclick="updateNilai(this)">
+                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" value="95.000" data-info="XL" onclick="updateNilai(this)">
                           <label class="form-check-label" for="flexRadioDefault2">
                             XL
                           </label>
