--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="fixed-top container-fluid bg-success">
+        <div class="fixed-top container-fluid bg-danger">
             <a class="navbar-brand" href="index.html" style="font-size: 40px;">TRIARGA</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -41,7 +41,7 @@
                         <img class="w-100" src="https://lh4.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
-                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <p class="card-text">Rp85.000 - 95.000</p>
                           <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
@@ -52,7 +52,7 @@
                         <img class="w-100" src="https://lh4.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
-                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <p class="card-text">Rp85.000 - 95.000</p>
                           <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                         <img class="w-100" src="https://lh3.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
-                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <p class="card-text">Rp85.000 - 95.000</p>
                           <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         <img class="w-100" src="https://lh3.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
-                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <p class="card-text">Rp85.000 - 95.000</p>
                           <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
@@ -85,7 +85,7 @@
                         <img class="w-100" src="https://lh3.google.com/u/0/d/1KcVZSyfdmAcTHMnHrgqrxCz_IjL9Wh7C=w1908-h897-iv2" alt="hitamcorakdepan">
                         <div class="card-body">
                           <h5 class="card-title">Sevenkey Hitam Corak</h5>
-                          <p class="card-text">Rp.80.000,00 - 95.000,00</p>
+                          <p class="card-text">Rp85.000 - 95.000</p>
                           <a href="detail_barang.html" class="btn btn-warning w-100">Beli</a>
                         </div>
                     </div>
