nav,font,gambar

--- a/daftar.html
+++ b/daftar.html
@@ -13,7 +13,7 @@
   <body class="bg-danger">
     <div class="container ">
         <h1 class=" text-center mt-4">
-            <a href="index.html" class="text-white" style="text-decoration: none;">TRIARGA</a>
+          <a href="index.html" class="text-white" style="text-decoration: none; font-family: 'Times New Roman', Times, serif;">TRI ARGA</a>
         </h1>
         <div class="card mx-auto mt-5" style="width: 400px;">
             <div class="card-body">
